<resources>
    <string name="app_name">Final_Assignment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="login">Log In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>\


    <!--    Dashboard-->
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow\n</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="welcome_to_art_gallery">Welcome to Art Gallery</string>
    <string name="imagelist">ImageList</string>

    <!-- dashboard -->
    <string name="mona_lisa">\"A half-length portrait painting of a woman with an enigmatic smile, considered one of the most famous paintings in the world. (Mona Lisa)\"</string>
    <string name="back"><![CDATA[<<BACK]]></string>
    <string name="artwork_image">Artwork Image</string>
    <string name="artwork_title">Artwork Title</string>
    <string name="by_john_doe">by John Doe</string>
    <string name="year_2019">Year: 2019</string>
    <string name="medium_oil_type">Medium: Oil Type</string>
    <string name="desc">This artwork captures the beauty of nature with a stunning sunset over the mountains.</string>
</resources>