<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="294dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/prompt_username"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/user_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_id">

            <EditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableStart="@drawable/user_icon"
                android:drawablePadding="5dp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:paddingStart="15sp"
                android:paddingEnd="20sp"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/password_id"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/prompt_password"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_card" />

        <androidx.cardview.widget.CardView
            android:id="@+id/password_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_id">

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:drawableStart="@drawable/pass_icon"
                android:drawablePadding="5sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:paddingStart="15sp"
                android:paddingEnd="20sp"
                android:textSize="16sp"
                tools:ignore="TextFields" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#C7A78E"
            android:elevation="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/login"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_card"
            app:strokeColor="#6F6B68"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>